<resources>
    <string name="app_name">Android Labs</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\'m a button</string>
    <string name="TextViewText">Look at my GUI</string>
    <string name="btnText">Click Here</string>
    <string name="TextArea">Type here...</string>
    <string name="SwitchText">Switch on/off</string>
    <string name="checkText">Check this out!</string>
    <string name="toast_message">Here is more information</string>
    <string name="snackbarTextOn">The switch is now on!</string>
    <string name="snackbarTextOff">The switch is now off!</string>

    <!--    Lab3-->
    <!--    Main Login-->
    <string name="enterEmail">Enter your email address:</string>
    <string name="emailPlace">Type email here</string>
    <string name="enterPass">Type your password: </string>
    <string name="loginBTN">LOGIN</string>
    <!--    Profile Page-->
    <string name="profile">Your Profile</string>
    <string name="nameText">Your Name:</string>
    <string name="namePlace">Enter your name</string>
    <string name="emailText">Your Email:</string>
    <string name="picText">Your picture:</string>
    <string name="takePic">Click the button above to take a picture</string>

    <!--Lab 4-->
    <!--Profile Page-->
    <string name="chatBtn">Go to chat</string>
    <!--Chat Page-->
    <string name="sendBtn">Send</string>
    <string name="recBtn">Receive</string>

    <string name="weather">Check The Weather</string>
    <string name="toolbar">Go to toolbar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>