<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/grid_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:columnCount="2"
    android:rowCount="4">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/TextViewText"
        android:textSize="30sp"
        android:layout_columnSpan="2"
        android:gravity="fill"
        />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:text="@string/ButtonText"/>
    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkText" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_gravity="fill"
        android:src="@drawable/flag" />



    <Switch
        android:id="@+id/switch1"

        android:layout_gravity="fill_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SwitchText"/>

    <EditText
        android:id="@+id/editText3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_columnSpan="2"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/TextArea"
        android:layout_row="3"
        android:layout_column="0"
        android:gravity="fill" />




</GridLayout>